# nnabla-nas

./: .gitignore  .gitlab-ci.yml  .readthedocs.yaml  GNUmakefile  LICENSE  README.md  args.py  dev-requirements.txt  example.py  exp.py  go.py  graph  jobs.sh  main.py  main_distributed.py  out.txt  requirements.txt  setup.cfg  setup.py  temp.py  test.py  test_mean.txt  working.py
.github/workflows/: build.yml
conf/: config.yaml
conf/args/: args.yaml
conf/hparams/: hparams.yaml  hparams_ofa_mbv3.yaml  hparams_ofa_resnet50.yaml  (+7 more)
docs/: README.md  get_started.md  requirements.txt
examples/: README.md  constraint_pnas_search.json  constraint_pnas_validate.json  dali.json  dali_search.json  dali_train.json  darts_search.json  darts_train.json  darts_validate.json  jobs.sh  mbn_imagenet_train.json  mbn_ref_cifar10.json  mbn_ref_imagenet.json  mbn_search.json  mbn_search_imagenet.json  mbn_search_latency.json  mbn_train.json  mbn_train_latency.json  mnv2_darts_search.json  mnv2_darts_validate.json  mnv2_reference_validate.json  mnv2_search.json  mnv2_train.json  mobilenet_cifar10_reference.json  mobilenet_cifar10_search.json  mobilenet_cifar10_search_latency.json  mobilenet_cifar10_train.json  mobilenet_imagenet_reference.json  mobilenet_imagenet_search.json  mobilenet_imagenet_search_latency.json  mobilenet_imagenet_search_songhan.json  mobilenet_imagenet_train.json  mobilenet_imagenet_train_latency.json  mobilenet_imagenet_train_songhan.json  pnas_search.json  pnas_search_latency.json  pnas_train.json  pnas_train_latency.json  pnas_validate.json  pnas_zoph_search.json  (+4 more)
nnabla_nas/: __init__.py  utils.py
tests/: test_batch_normalization.py  test_convolution.py  test_linear.py  test_module.py  test_module_base.py  test_module_container.py  test_modules.py  test_pooling.py  test_relu.py
(+486 files in other folders)
