# Copyright (c) 2020 Sony Corporation. All Rights Reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[metadata]
name = nnabla_nas
version = attr: nnabla_nas.__version__
description = Use NNC compute resource from NNabla
classifiers = 
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Artificial Intelligence
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Operating System :: POSIX :: Linux
keywords = deep learning artificial intelligence machine learning neural network
python_requires = >=3.6

[options]
install_requires =
    graphviz
    h5py
    mako
    mypy
    networkx
    nnabla
    scikit-learn
    tensorboard
    tqdm
    hydra-core
    hydra_colorlog
    more_itertools
package_dir =
    nnabla_nas = nnabla_nas
packages = find:

[options.entry_points]
console_scripts = 
    nnabla_nas = nnabla_nas.utils.cli.cli:main
